# climusic

./: .clang-format  .gitignore  CMakeLists.txt  Make.sh  README.md  build.rb
.scripts/: Format.sh  color.rb  format.rb
include/: cm_bool.h  cm_buffer.h  cm_colors.h  cm_env.h  cm_file.h  cm_gui.h  cm_inline.h  cm_online.h  cm_screen.h  cm_sound.h  cm_string.h  cm_vec.h
src/: cm_colors.c  cm_file.c  cm_gui.c  cm_online.c  cm_screen.c  cm_sound.c  cm_string.c  cm_vec.c  main.c
